WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130962
[CoordinatedGraphics] Content scale factor should not be applied to draw contents when fixed layout is not used.
https://bugs.webkit.org/show_bug.cgi?id=130962
Summary
[CoordinatedGraphics] Content scale factor should not be applied to draw cont...
Eunmi Lee
Reported
2014-03-31 03:14:11 PDT
Contents is painted by applying current page scale factor in the coordinated graphics even though page scale factor is already applied to the contents when fixed layout is not used. That means page scale factor is applied twice when fixed layout is not used. We can see wrong scaling results in the efl port's MiniBrowser using control+"-/+" button. - Bottom of the screen is not rendered (just white) when scale factor is less than 1.0. - We can not scroll down to the bottom of the page when scale factor is greater than 1.0. If fixed layout is not used delegating scaling is also not used, so we should not apply page scale factor to draw contents in that case.
Attachments
Patch
(2.45 KB, patch)
2014-03-31 03:37 PDT
,
Eunmi Lee
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eunmi Lee
Comment 1
2014-03-31 03:37:58 PDT
Created
attachment 228167
[details]
Patch
Gyuyoung Kim
Comment 2
2014-03-31 03:44:03 PDT
Comment on
attachment 228167
[details]
Patch I'm not coordinated graphics expert though, as far as I know, Coordinated graphics is only used by EFL port. So, rs=me for EFL port development.
WebKit Commit Bot
Comment 3
2014-04-01 01:34:38 PDT
Comment on
attachment 228167
[details]
Patch Clearing flags on attachment: 228167 Committed
r166572
: <
http://trac.webkit.org/changeset/166572
>
WebKit Commit Bot
Comment 4
2014-04-01 01:34:42 PDT
All reviewed patches have been landed. Closing bug.
Andrzej Badowski
Comment 5
2014-04-04 07:29:50 PDT
***
Bug 130838
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug