[CoordinatedGraphics] Content scale factor should not be applied to draw contents when fixed layout is not used. https://bugs.webkit.org/show_bug.cgi?id=130962

Reviewed by Gyuyoung Kim.

Delegating scaling is turned off when fixed layout is not used in the
coordinated graphics, so page scale factor is applied to the contents
directly.
In that case, we should not apply page scale factor to coordinated
graphics to draw contents and calculate visible content rect.

Currently, page scale factor is applied twice to the coordinated
graphics and contents, so result of scaling is abnormal.

* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::transformToScene):
(WebKit::WebView::visibleContentsSize):


Canonical link: https://commits.webkit.org/149080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166572 268f45cc-cd09-0410-ab3c-d52691b4dbfc